Name:                mouser-match
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Executable mouser-match
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                      >= 4.4,
    lens                      >= 3.7.6,
    bytestring                >= 0.9.1,
    heist                     >= 0.13,
    MonadCatchIO-transformers >= 0.2.1,
    mtl                       >= 2,
    snap                      >= 0.13,
    snap-core                 >= 0.9,
    snap-server               >= 0.9,
    snap-loader-dynamic == 0.10.*,
    snap-loader-static        >= 0.9,
    text                      >= 0.11,
    time                      >= 1.1,
    xmlhtml                   >= 0.1,
    snaplet-acid-state        >= 0.2.5,
    acid-state                >= 0.12.1,
    safecopy                  >= 0.8.2,
    transformers              >= 0.3.0.0,
    cryptohash                >= 0.11.1,
    errors                    >= 1.4.5,
    snap-extras               >= 0.9,
    containers                >= 0.5,
    aeson                     >= 0.6,
    Decimal                   >= 0.3,
    either                    >= 4.1.1,
    digestive-functors        >= 0.7,
    digestive-functors-heist  >= 0.8.5,
    digestive-functors-snap   >= 0.6,
    validations               >= 0.1.0.1,
    ixset                     >= 1.0.5,
    text-format               >= 0.3.1.1,
    haste-compiler            >= 0.3


  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
